# BasicsOfProgramming

./: CMakeLists.txt  README.md  main.c
DiskretMath/: diskretmath.c  diskretmath.h
labs/lab_16/: lab_16.c  lab_16.h
labs/lab_18/: lab_18.c  lab_18.h
labs/lab_19/: lab_19.c  lab_19.h
labs/lab_20/: lab_20.c  lab_20.h
labs/tests/: lab_16_tests.c  lab_16_tests.h  lab_18_tests.c  lab_18_tests.h
libs/: CMakeLists.txt
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
libs/string/: string.c  string.h
libs/string/tasks/: string_test.c  string_test.h
